# mochi-api-client

./: .copilot-instructions.md  .copilot-review-instructions.md  .copilot-test-instructions.md  .coverage  .gitignore  LICENSE  README.md  conftest.py  package_and_upload.bat  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml
examples/: script.py
mochi/: __init__.py  auth.py  cards.py  client.py  constant.py  decks.py  models.py  template.py
tests/: test_cards.py  test_decks.py
tests/unit/: tdata.py  test_auth.py  test_cards.py  test_client.py  test_decks.py  test_templates.py
